# kokkos-remote-spaces

examples/cgsolve/parallel/: CMakeLists.txt  KokkosBlas3_gemm_dd.hpp  KokkosBlas3_gemm_dd_rr.hpp  KokkosBlas3_gemm_rr.hpp  KokkosBlas3_gemm_rr_combined.hpp  cgsolve.cpp  cgsolve_mpi.cpp  generate_matrix.hpp  ops_dd.h  pipeline_cgsolve.cpp  pipeline_cgsolve_mpi.cpp  sstep_cgsolve_mpi.cpp
